[package]
name = "ui_helpers_rs"
version = "0.1.0"
edition = "2021"


[workspace]
resolver = "2"

members = [ 
    "macros_core", 
    # "macros", 
    # "utils",
    # "classlist", 
    # "variant"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros_core = { path = "./macros_core" }
# utils = { path = "./utils" }
# quote = "1.0.36"
# log = "0.4.21"
# variant = { path = "./variant" }
