[package]
name = "ui_helpers_rs"
version = "0.1.0"
edition = "2021"


[workspace]
resolver = "2"

members = [ 
    "macros_core", 
    "macros", 
    "classlist", 
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
classlist = { path = "./classlist" }
macros = { path = "./macros", default-features = false }

