[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
name = "macros"
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = { version = "2.0.66", features = ["extra-traits"] }
thiserror = "1.0.61"
