[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
name = "macros"
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.36"
macros_core = { path = "../macros_core" }
proc-macro2 = "1.0.85"
syn = { version = "2.0.66", features = ["extra-traits"] }
