[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
name = "macros"
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros_core = { path = "../macros_core", default-features = false }


[features]
default = ["debug"]
debug = ["macros_core/debug"]